--- a/config/.harness/deploy/deployment.yaml
+++ b/config/.harness/deploy/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: harness_demo
     spec:
       containers:
-      - image: docker pull 1903/harness_demo:11
+      - image: 1903/harness_demo:11
         name: harness_demo
         ports:
         - containerPort: 80
